# scim-sanity

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ansible/: README.md
ansible/action_plugins/: scim_validate.py
ansible/playbooks/: example.yml
docs/: agentic-framing.md  engineering-audit-2026-04.md  roadmap-2026-04.md
docs/integrations/: README.md  entra-id.md  google-workspace.md
docs/reference/cis-baselines/: README.md
docs/reference/microsoft-benchmarks/: README.md
docs/security/: README.md  compliance.md
scim_sanity/: __init__.py  __main__.py  api.py  cli.py  examples.py  http_client.py  payload_factory.py  profiles.py  response_validator.py  schemas.py  validator.py
scim_sanity/probe/: __init__.py  report.py  runner.py  tests.py
tests/: __init__.py  mock_scim_server.py  test_agent_invalid.py  test_agent_valid.py  test_agentic_application_invalid.py  test_agentic_application_valid.py  test_examples.py  test_group_valid.py  test_http_client.py  test_patch_invalid.py  test_patch_valid.py  test_payload_factory.py  test_probe_api_signature.py  test_probe_runner.py  test_response_validator.py  test_user_invalid.py  test_user_valid.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/api/: client.ts
web/src/components/: ExampleCard.tsx  JsonEditor.tsx  ProbeResults.tsx  ValidationResults.tsx
web/src/layouts/: AppLayout.tsx
web/src/pages/: ExamplesPage.tsx  ProbePage.tsx  ValidatePage.tsx
